--- a/package.json
+++ b/package.json
@@ -15,9 +15,13 @@
     "@remix-run/react": "^2.16.3",
     "@remix-run/serve": "^2.16.3",
     "@supabase/supabase-js": "^2.49.3",
+    "@types/react-datepicker": "^6.2.0",
+    "@types/uuid": "^10.0.0",
     "isbot": "^4.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-datepicker": "^8.2.1",
+    "react-dom": "^18.2.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.16.3",
