--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@remix-run/serve": "^2.16.3",
     "@supabase/supabase-js": "^2.49.3",
     "@types/uuid": "^10.0.0",
+    "browser-image-compression": "^2.0.2",
     "isbot": "^4.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
